Fix distorted card back side

--- a/styles/global.css
+++ b/styles/global.css
@@ -153,4 +153,5 @@ input:focus {
 
 .back {
     background-image: url("/assets/cards/cardback.webp");
+    background-size: 100% 100%;
 }
